--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/_layout_styles_import.scss
@@ -14,7 +14,7 @@
 
 @import "theme/partials/layout/article_styles/splash_articles_styles";
 @import "theme/partials/layout/article_styles/home_page_articles_styles_v2";
-@import "theme/partials/layout/article_styles/home_page_articles_styles";
+// @import "theme/partials/layout/article_styles/home_page_articles_styles";
 @import "theme/partials/layout/article_styles/my_expertise_page_articles_styles";
 @import "theme/partials/layout/article_styles/management_page_articles_styles";
 @import "theme/partials/layout/article_styles/development_page_articles_styles";
@@ -25,6 +25,6 @@
 @import "theme/partials/layout/article_styles/brand_history_customization";
 @import "theme/partials/layout/article_styles/category_history_customization";
 @import "theme/partials/layout/article_styles/expt_overlay_article_customization";
-@import "theme/partials/layout/article_styles/my_value_articles_customization";
+// @import "theme/partials/layout/article_styles/my_value_articles_customization";
 
 @import "theme/partials/layout/modules/my_value_diagrams";
