--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_font_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_font_variables.scss
@@ -14,7 +14,7 @@ desktop-xxl:   2560px
 ); */
 
 $font-family-sans-serif:      geomanist, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-$font-family-monospace:       Arial, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-monospace:       roboto, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 $font-family-serif:         adobe-garamond-pro, Georgia, Palatino, "Times New Roman", Courier;
 
 $font-weight-thin:          100;
