--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_diagrams.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_diagrams.scss
@@ -6,8 +6,6 @@
 // MUTUAL SETTINGS
 //
 
-
-
 #objectives__diagram {
     @include make-row;
 
@@ -20,7 +18,9 @@
     align-items: center;
     justify-content: space-around;
     max-width: 90%;
-    @include mq('tablet-wide'){
+    width: 80%;
+
+    @include mq("tablet-wide") {
         display: flex;
         flex-direction: row;
         max-width: 100%;
@@ -29,55 +29,64 @@
         align-items: center;
         justify-content: center;
     }
-    .diagram-content {
+
+
+    .diagram__content_container {
         @include make-row;
-        margin-left: 0px;
-        margin-right: 0px;
+
+        width: 100%;
+        max-width: 100%;
+        @include vr($margin: 1 0 1 0);
         display: flex;
         flex-direction: row;
-        align-items: center;  
-    ol {
-        margin-block-end: 0px;
-        margin-block-start: 0px;
-        list-style-position: inside;
-        padding-inline-start: 0px;
-        -webkit-padding-start: 0px;
-        align-self: center;
-        @media (max-width: 25em){
-            margin-left: 2em;
-        }
-        // @include push-auto;
-    }
-    li {
+        align-items: center;
 
-        @include vr($font-size: 2);
-        padding-right: 0;
-        @include mq("phone") {
-            margin-left: 4rem;
-        }
-        @include mq("tablet") {
-    
-            margin-left: 2rem;
+        ol {
+            margin-block-end: 0px;
+            margin-block-start: 0px;
+            list-style-position: inside;
+            padding-inline-start: 0px;
+            -webkit-padding-start: 0px;
+            align-self: center;
+
+            @media (max-width: 25em) {
+                margin-left: 2em;
+            }
+
+            // @include push-auto;
+       
         }
 
-    }
+        li {
+            @include vr($font-size: 2);
+
+            padding-right: 0;
+
+            @include mq("phone") {
+                margin-left: 4rem;
+            }
 
 
-    .br {
-        display: none;
-    }
+            @include mq("tablet") {
+                margin-left: 2rem;
+            }
+        }
 
-    .icon, .objectives-offset {
-        @include make-col-ready;
-        @include make-col(4);
-        display: block;
-    }
+        .br {
+            display: none;
+        }
 
+        .content__container_icon, .objectives-offset {
+            @include make-col-ready;
+            width: 20%;
+            max-width: 20%;
+            display: block;
+        }
 
-    @include mq("tablet-wide") {
-        /*   display: none; */
-        flex-direction: row;
-        flex-wrap: nowrap;
+        @include mq("tablet-wide") {
+            /*   display: none; */
+            flex-direction: row;
+            flex-wrap: nowrap;
             flex-direction: column;
             width: 23%;
             max-width: 23%;
@@ -85,114 +94,113 @@
             padding-right: 0px;
             justify-content: center;
             align-items: center;
+
             // align-content: center;
             flex: 0 0 auto;
 
-        .objectives-offset{
-            display: none;
+            .objectives-offset {
+                display: none;
+            }
+
+            .content__container_icon {
+                width: 80%;
+                max-width: 80%;
+                height: auto;
+                flex: 0 0 auto;
+            }
+
+            li {
+                margin-left: 0;
+
+                @include vr($font-size: 1.5);
+            }
         }
-        .icon{
-        width: 80%;
-        max-width: 80%;
-        height: auto;
-        flex: 0 0 auto;
-        }
-        
-    
-        li{
-            margin-left: 0;
-            @include vr($font-size: 1.5);
+    }
+
+    @include mq("tablet-wide") {
+        .my-value__conclusion {
+            @include make-col-ready;
+            @include make-col(12);
+
+            padding-left: 0px;
+            padding-right: 0px;
+            align-items: flex-start;
         }
     }
 }
 
- @include mq('tablet-wide'){
-    .my-value__conclusion{
-            @include make-col-ready();
-            @include make-col(12);
-            padding-left: 0px;
-            padding-right: 0px;
-            align-items: flex-start;
-
-
-}
+text.st4.st6{
+    fill:#111;
+    stroke: none;
 }
 
-
+text.st3.st4.st5{
+    stroke: none;
+    fill: #111;
 }
-
-
 
 
 /* .objectives-diagram__vertical--delta { */
 
+.diagram__end-to-end--vertical {}
 
+.diagram__modern-marketing #headers text {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.diagram__end-to-end--vertical {
-
+    font-family: roboto;
+    font-weight: bold;
+    font-size: 28px;
 }
-
-
-
-
-
-
-
-
-/* .diagram__modern-marketing {
-    width: 100%;
-} */
 
 .intro-container {}
 
 .cta-container {}
 
 .diagram__competitive-advantage {
-    .st1 {
-        font-weight: 600;
+    .st1, .st2, .st6, .st7 {
+        font-weight: normal;
+        // fill: $primary;
+        stroke: none;
+        font-size: 16px;
     }
 
     .st4 {
         // font-size: $ms-2_5;
         font-weight: 300;
         letter-spacing: .05rem;
-    }
-
+        stroke: none;
+}
     .st7 {
         // font-size: $ms-2;
    
     }
 
-    .st1, .st4, .st6, .st7 {
-        font-family: $font-family-monospace;
+    .st1, .st2, .st4, .st6, .st7 {
+          fill: #111;
     }
 
     #Layer_1 {
-        .st0, .st8, .st12, .st13 {
-            stroke: $gray-700;
+       .st8, .st12, .st13 {
+            // stroke: $gray-700;
+            stroke: $primary;
         }
     }
 
     #Layer_2 .st0 {
-        fill: $tungsten;
+        // fill: $tungsten;
+        fill: $primary;
     }
+    polygon {
+        fill: $gray-500;
+    }
+    #Layer_1 > g:nth-child(1) > g:nth-child(1) > g:nth-child(1) > g > line,
+    #Layer_1 > g:nth-child(1) > g:nth-child(1) > g:nth-child(2) > g > line,
+    #Layer_1 > g:nth-child(1) > g:nth-child(1) > g:nth-child(3) > g > line{
+        stroke: $gray-500;
+    }
+}
+
+#appbar\2e smiley\2e happy-2, #Path_7509, #Path_7510, #Layer_1 > g:nth-child(1) > g:nth-child(3) > g:nth-child(4), #Layer_1 > g:nth-child(1) > g:nth-child(3) > g:nth-child(6), #Layer_1 > g:nth-child(1) > g:nth-child(2) > g:nth-child(6), #Layer_1 > g:nth-child(1) > g:nth-child(2) > g:nth-child(4){
+    fill: $primary;
 }
 
 
