--- a/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/variables/_theme_color_and_nav_variables.scss
@@ -144,9 +144,9 @@ $display-text-color:			          inherit;
 $body-text-color:                   inherit;
 $para-color: 					              inherit;
 
-$link-color:                        $accent;
+$link-color:                        $primary;
 $link-decoration:                   $orange;
-$link-hover-color:                  $indigo;
+$link-hover-color:                  $accent;
 $link-hover-decoration:             none;
 
 $success:                  		      $green;
@@ -171,6 +171,17 @@ $theme-colors: map-merge((
 
 $body-bg:						                $white;
 
+
+$link-color:                theme-color("primary") !default;
+$link-decoration:           none !default;
+$link-hover-color:          darken($link-color, 15%) !default;
+$link-hover-decoration:     underline !default;
+
+//
+// Paragraphs
+// Style p element.
+
+$paragraph-margin-bottom:   1rem !default;
 
 $navbar-padding:                    1em;
 
@@ -208,7 +219,7 @@ $navbar-light-toggler-border-color: rgba($black, .1) !default;
 
 
 $expertise-overlay-icon-fill-color: $tungsten;
-$qualifications-icon-fill-color:    $slate;
+$qualifications-icon-fill-color:    $primary;
 
 
 $carousel-control-color:            $slate;
