--- a/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_diagrams.scss
+++ b/wp-content/themes/understrap-child/sass/theme/partials/layout/modules/_my_value_diagrams.scss
@@ -144,12 +144,11 @@ text.st3.st4.st5{
 
 .diagram__end-to-end--vertical {}
 
-.diagram__modern-marketing #headers text {
-
+.diagram__modern-marketing{
+   #headers text{
     font-family: roboto;
-    font-weight: bold;
-    font-size: 28px;
-}
+   } 
+} 
 
 .intro-container {}
 
